--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,47 @@
+// Gradle plugins
 buildscript {
     repositories {
         jcenter()
+        maven {
+            name = 'forge'
+            url = 'http://files.minecraftforge.net/maven'
+        }
+        maven {
+            name = 'minecrell'
+            url = 'http://repo.minecrell.net/releases'
+        }
+    }
+
+    dependencies {
+        classpath 'net.minecrell:VanillaGradle:2.0.3_1'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
-group 'boomshroom'
-version '1.0-SNAPSHOT'
+apply plugin: 'net.minecrell.vanilla.server.library'
 
-apply plugin: 'java'
+group = 'boomshroom'
+version = '0.1-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 repositories {
-    mavenCentral()
     maven {
-        name 'Sponge maven repo'
-        url 'http://repo.spongepowered.org/maven'
+        name = 'sponge'
+        url = 'http://repo.spongepowered.org/maven'
     }
+}
+
+minecraft {
+    version = '1.8.9'
+    mappings = 'snapshot_20160204'
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.spongepowered:spongeapi:3.0.0'
+}
+
+reobf.jar {
+    mappingType = 'SEARGE'
 }
